# hermes-continuation

./: .gitignore  CHANGELOG.md  PROGRESS.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTOMATIC_HANDOFF_TRIGGER_POLICY.md  EXAMPLES.md  HANDOFF_SCHEMA.md  PHASE_3B_3C_EXECUTION_PLAN.md  PLUGIN_WRAPPER.md  RESUME_COMMAND.md  USAGE.md  USAGE.zh-CN.md  USAGE.zh-TW.md  V0.3.0_EXECUTION_PLAN.md  WATCH_ADVISORY_TRIGGER_PLAN.md
src/hermes_continuation/: __init__.py  auto_doctor.py  auto_watch.py  cli.py  context_monitor.py  dialogue_context.py  doctor.py  git_state.py  handoff_watch_review.py  i18n.py  packet.py  plugin.py  prepare.py  redaction.py  render_markdown.py  task_state.py  validate.py  watch.py  watch_logger.py
tests/: conftest.py  test_auto_doctor.py  test_auto_watch.py  test_cli_create.py  test_cli_resume.py  test_cli_watch.py  test_context_monitor.py  test_dialogue_context.py  test_doctor.py  test_git_state.py  test_handoff_watch_review.py  test_hermes_runtime_plugin_smoke.py  test_packet.py  test_plugin_wrapper.py  test_prepare.py  test_public_docs.py  test_redaction.py  test_render_markdown.py  test_task_state.py  test_watch.py  test_watch_logger.py
