[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-continuation"
version = "0.1.0"
description = "Structured Hermes long-task handoff packet generator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Nancy AI"}]
dependencies = []

[project.scripts]
hermes-handoff = "hermes_continuation.cli:main"

[project.entry-points."hermes_agent.plugins"]
hermes-continuation = "hermes_continuation.plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
