[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-continuation"
version = "0.3.0"
description = "Structured Hermes long-task handoff packet generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Arthur Liao"}]
keywords = ["hermes", "continuation", "handoff", "agent", "plugin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
license = {text = "Apache-2.0"}
dependencies = []

[project.urls]
Homepage = "https://github.com/zycaskevin/hermes-continuation"
Repository = "https://github.com/zycaskevin/hermes-continuation"
Issues = "https://github.com/zycaskevin/hermes-continuation/issues"

[project.scripts]
hermes-handoff = "hermes_continuation.cli:main"

[project.entry-points."hermes_agent.plugins"]
hermes-continuation = "hermes_continuation.plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
